# Hypa

./: .gitignore  AGENTS.md  CLAUDE.md  Directory.Build.targets  Hypa.slnx  README.md  install.ps1  install.sh  license.md  nuget.config
.github/: copilot-instructions.md  release.yml
.github/workflows/: ci.yml  pi-package-release.yml  release.yml  static.yml
docs/ADRs/: 0000-adr-template.md  0001-local-context-runtime-operating-model.md  0002-deterministic-tool-output-compression.md  0003-code-intelligence-provider-strategy.md  0004-optional-language-server-enrichment.md  0005-command-rewrite-registry.md  0006-filter-dsl-and-parser-tiers.md  0007-sdk-multi-language-generation.md  0008-telemetry-model-boundaries.md
docs/architecture/: README.md  code-intelligence.md  command-rewrite.md  compression-pipeline.md  data-model.md  engineering-principles.md  feature-parity-roadmap.md  mcp-and-tools.md  runtime-design.md
docs/guides/: opencode.md  pi.md
homebrew/: hypa.rb.tpl
npm/: bootstrap-publish.sh
npm/hypa/: README.md  bin.js  package.json
npm/hypa-platform/: README.md  package.json  postinstall.js
python/: README.md  pyproject.toml
python/hypa/: _runner.py
python/scripts/: build_wheel.py
scripts/: build-tree-sitter-markdown.ps1  build-tree-sitter-markdown.sh
src/Hypa.Cli/: Hypa.Cli.csproj  Program.cs
src/Hypa.Infrastructure/: Hypa.Infrastructure.csproj
src/Hypa.Runtime/: Hypa.Runtime.csproj
src/Hypa.Sdk/: Hypa.Sdk.csproj
tests/Hypa.GoldenTests/: FilterGoldenTests.cs  GoldenTestRunner.cs  Hypa.GoldenTests.csproj  MarkdownGoldenTests.cs  (+1 more)
(+556 files in other folders)
