[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypa"
dynamic = ["version"]
description = "Local context runtime for agentic development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Hypabolic/Hypa"

[project.scripts]
hypa = "hypa._runner:main"

[tool.hatch.version]
path = "hypa/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["hypa"]
